[gd_scene load_steps=4 format=2]

[ext_resource path="res://resources/code_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://script_editor.gd" type="Script" id=2]
[ext_resource path="res://run_button.gd" type="Script" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
split_offset = 640
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
margin_right = 655.0
margin_bottom = 720.0
custom_constants/separation = 0

[node name="ScriptEditor" type="TextEdit" parent="HSplitContainer/VBoxContainer"]
margin_right = 655.0
margin_bottom = 692.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
custom_constants/line_spacing = 6
text = "extends Node

func _ready():
	print(\"Hello world!\")
"
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
fold_gutter = true
highlight_all_occurrences = true
hiding_enabled = true
wrap_enabled = true
caret_blink = true
caret_blink_speed = 0.5
script = ExtResource( 2 )

[node name="RunButton" type="Button" parent="HSplitContainer/VBoxContainer/ScriptEditor"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -84.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 37.0
grow_horizontal = 0
text = "Run"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorPanel" type="PanelContainer" parent="HSplitContainer/VBoxContainer"]
margin_top = 692.0
margin_right = 655.0
margin_bottom = 720.0

[node name="Label" type="Label" parent="HSplitContainer/VBoxContainer/ErrorPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 648.0
margin_bottom = 21.0
custom_colors/font_color = Color( 1, 0.501961, 0.376471, 1 )
autowrap = true

[node name="OutputPanel" type="PanelContainer" parent="HSplitContainer"]
margin_left = 667.0
margin_right = 1280.0
margin_bottom = 720.0

[node name="RichTextLabel" type="RichTextLabel" parent="HSplitContainer/OutputPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 606.0
margin_bottom = 713.0
custom_fonts/normal_font = ExtResource( 1 )
[connection signal="pressed" from="HSplitContainer/VBoxContainer/ScriptEditor/RunButton" to="HSplitContainer/VBoxContainer/ScriptEditor" method="_run_button_pressed"]
